--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,6 @@ edition = "2021"
 
 [dependencies]
 clap = { version = "4.4.7", features = ["derive"] }
+clearscreen = "2.0.1"
 colored = "2.0.4"
 text_io = "0.1.12"
